// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/app/models/note basic validation should add _id if it is a new record 1`] = `
Object {
  "_id": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  "date": 20160101,
  "note": "some text",
  "plantIds": Array [
    "5c2aefa687358b2af50246d6",
  ],
}
`;

exports[`/app/models/note basic validation should fail validation 1`] = `
Object {
  "_id": " id is invalid",
  "date": "Date must be a number",
  "note": "Note has an incorrect length",
  "plantIds": "Plant ids must be MongoIds",
}
`;

exports[`/app/models/note basic validation should pass minimum validation 1`] = `
Object {
  "_id": "5c77545608a6cd11fdb0ca86",
  "date": 20160101,
  "note": "some text",
  "plantIds": Array [
    "5c77545608a6cd11fdb0ca87",
  ],
}
`;

exports[`/app/models/note basic validation should strip out props not in the schema 1`] = `
Object {
  "_id": "5c2aefa2da47a52adc1c4651",
  "date": 20160101,
  "note": "some text",
  "plantIds": Array [
    "5c2aefa687358b2af50246d6",
  ],
}
`;

exports[`/app/models/note metric validation should convert strings to numbers 1`] = `
Object {
  "_id": "5e180098d3574ce77dfc2d01",
  "date": 20160101,
  "metrics": Object {
    "firstBlossom": true,
    "firstBud": true,
    "girth": 1.1,
    "harvestCount": 5,
    "harvestEnd": true,
    "harvestStart": true,
    "harvestWeight": 5,
    "height": 5.5,
    "lastBlossom": true,
    "leafShedEnd": true,
    "leafShedStart": true,
  },
  "note": "some text",
  "plantIds": Array [
    "5e180098d3574ce77dfc2d02",
  ],
}
`;

exports[`/app/models/note metric validation should validate numbers and booleans 1`] = `
Object {
  "_id": "5e180098d3574ce77dfc2d01",
  "date": 20160101,
  "metrics": Object {
    "firstBlossom": true,
    "firstBud": true,
    "girth": 1.1,
    "harvestCount": 5,
    "harvestEnd": true,
    "harvestStart": true,
    "harvestWeight": 5,
    "height": 5.5,
    "lastBlossom": true,
    "leafShedEnd": true,
    "leafShedStart": true,
  },
  "note": "some text",
  "plantIds": Array [
    "5e180098d3574ce77dfc2d02",
  ],
}
`;

exports[`/app/models/note note.model/images validation should convert image size if it is a string number 1`] = `
Object {
  "_id": "5c2af2b712d4132fa1e69d39",
  "date": 20160101,
  "images": Array [
    Object {
      "ext": "jpg",
      "id": "5c2af2b712d4132fa1e69d3a",
      "originalname": "apple tree",
      "size": 123,
      "sizes": Array [],
    },
  ],
  "note": "some text",
  "plantIds": Array [
    "5c2af2b712d4132fa1e69d38",
  ],
}
`;

exports[`/app/models/note note.model/images validation should fail if images has extra props 1`] = `
Object {
  "images": "Images must only have the following allowed props: id,ext,originalname,size,sizes and in one of the items in the array it found these props as well: extra",
}
`;
